[project]
name = "bluesky-gym-hallucination"
version = "0.1.0"
description = "An extended Gymnasium environment for Air Traffic Management RL research, featuring hallucination detection and combined horizontal/vertical conflict resolution."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch==2.6.0",
    "pygame==2.6.1",
    "gymnasium==1.1.1",
    "stable-baselines3==2.6.0",
    "numpy==2.2.4",
    "bluesky-simulator==1.0.3",
]

[project.authors]
# Original project maintainers
Jan Groot = { email = "d.j.groot@tudelft.nl" }
Joost Ellerbroek = { email = "j.ellerbroek@tudelft.nl" }
Giulia Leto = { email = "g.leto@tudelft.nl" }
Sasha Vlaskin = { email = "a.vlaskin@tudelft.nl" }
# Additional contributor
Somnath Panigrahi = { email = "somnath.panigrahi@example.com" }

[project.urls]
Homepage = "https://github.com/Somnathab3/bluesky-gym-hallucination"
Repository = "https://github.com/Somnathab3/bluesky-gym-hallucination"
Issues     = "https://github.com/Somnathab3/bluesky-gym-hallucination/issues"

[build-system]
requires    = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "bluesky_gym/*",
  "bluesky_gym_hallucination/*",
]
