[project]
name = "bluesky-gym-hallucination"
version = "0.1.0"
description = "An extended Gymnasium environment for Air Traffic Management RL research, featuring hallucination detection and combined horizontal/vertical conflict resolution."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "pygame",
    "gymnasium",
    "stable-baselines3",
    "numpy",
    "bluesky-simulator>=1.0.7",
]

# Authors must be here, as a list of tables:
authors = [
  { name = "Jan Groot",           email = "d.j.groot@tudelft.nl" },
  { name = "Joost Ellerbroek",    email = "j.ellerbroek@tudelft.nl" },
  { name = "Giulia Leto",         email = "g.leto@tudelft.nl" },
  { name = "Sasha Vlaskin",        email = "a.vlaskin@tudelft.nl" },
  { name = "Somnath Panigrahi",   email = "somnath.panigrahi@example.com" },
]

[project.urls]
Homepage   = "https://github.com/Somnathab3/bluesky-gym-hallucination"
Repository = "https://github.com/Somnathab3/bluesky-gym-hallucination"
Issues     = "https://github.com/Somnathab3/bluesky-gym-hallucination/issues"

[build-system]
requires    = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "bluesky_gym/*",
  "bluesky_gym_hallucination/*",
]

[tool.hatch.build.targets.wheel]
packages = [
  "bluesky_gym",
  "bluesky_gym_hallucination"
]
